--- a/_config.yml
+++ b/_config.yml
@@ -6,28 +6,28 @@ kramdown:
   input: GFM
 
 # 作者信息
-author: 
-  name: 闫肃
-  email: suyan0830@gmail.com
-  link: http://yansu.org
-  weibo: http://weibo.com/yansu0711
-  github: http://github.com/suyan
+# author: 
+#   name: Tramp
+#   email: suyan0830@gmail.com
+#   link: http://yansu.org
+#   weibo: http://weibo.com/yansu0711
+#   github: http://github.com/suyan
 
 # 站点信息
-title: 闫肃的博客 
-description: 闫肃的博客
-url: http://yansu.org
-rss_url: /pages/atom.xml
+title: X-Focus
+description: X的博客
+url: http://magicii.github.io/
+# rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
 avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
 favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
 
 # google analytics 设置
-ga:
-  id: UA-54767140-1
-  url: yansu.org
+# ga:
+#   id: UA-54767140-1
+#   url: yansu.org
 
 # disqus 设置
 disqus:
-  shortname: suyan-zh
+  shortname: focus
